build/istio/virtialservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: java-application-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - http-gateway
  http:
    - match:
        - uri:
            exact: /
        - uri:
            exact: /log
        - uri:
            exact: /logs
      route:
        - destination:
            host: java-application.default.svc.cluster.local
            port:
              number: 8000

    - match:
        - uri:
            regex: ^.*$
      route:
        - destination:
            host: java-application.default.svc.cluster.local
            port:
              number: 8000
      fault:
        abort:
          percentage:
            value: 100
          httpStatus: 404
