build/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: java-application-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - http-gateway
  http:
    - match:
        - uri:
            exact: /
          method:
            exact: GET
        - uri:
            exact: /logs
          method:
            exact: GET
      route:
        - destination:
            host: java-application.default.svc.cluster.local
            port:
              number: 8000

    - match:
        - uri:
            exact: /log
          method:
            exact: POST
      route:
        - destination:
            host: java-application.default.svc.cluster.local
            port:
              number: 8000

      fault:
        delay:
          percentage:
            value: 100
          fixedDelay: 2s

      timeout: 1s

      retries:
        attempts: 2
        perTryTimeout: 1s
        retryOn: connect-failure,refused-stream,unavailable,gateway-error

    - match:
        - uri:
            regex: ^.*$
      route:
        - destination:
            host: java-application.default.svc.cluster.local
            port:
              number: 8000
      fault:
        abort:
          percentage:
            value: 100
          httpStatus: 404
